@startuml

title __KYRSOVAYA's Class Diagram__\n


    namespace om.example.kurs {
      class com.example.kurs.DB {
      }
    }

  


    namespace om.example.kurs {
      class com.example.kurs.HelloApplication {
      }
    }

  


    namespace om.example.kurs {
      class com.example.kurs.HelloController {
      }
    }

  


    namespace om.example.kurs {
      interface com.example.kurs.InterfaceDB {
      }
    }

  


    namespace om.example.kurs {
      class com.example.kurs.ListDB {
      }
    }

  

  com.example.kurs.HelloApplication -up-|> javafx.application.Application
  com.example.kurs.HelloController .up.|> javafx.fxml.Initializable
  com.example.kurs.HelloController o-- com.example.kurs.DB : DBAdd
  com.example.kurs.HelloController o-- com.example.kurs.InterfaceDB : interfaceDB
  com.example.kurs.ListDB .up.|> com.example.kurs.InterfaceDB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
